--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-imagemin": "^2.3.0",
+    "gulp-load-plugins": "^1.0.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.0.4",
