--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-imagemin": "^2.3.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-rigger": "^0.5.8",
+    "gulp-run-sequence": "^0.3.2",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.2",
     "gulp-watch": "^4.3.5",
