--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-imagemin": "^2.3.0",
+    "gulp-jscs": "^3.0.2",
     "gulp-minify-css": "^1.2.1",
     "gulp-rigger": "^0.5.8",
     "gulp-run-sequence": "^0.3.2",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "imagemin-pngquant": "^4.2.0",
     "rimraf": "^2.4.3"
+  },
+  "dependencies": {
+    "lodash": "^3.10.1"
   }
 }
