--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-sync": "^2.9.11",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-htmlhint": "^0.3.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-jscs": "^3.0.2",
     "gulp-minify-css": "^1.2.1",
@@ -26,8 +27,5 @@
     "gulp-watch": "^4.3.5",
     "imagemin-pngquant": "^4.2.0",
     "rimraf": "^2.4.3"
-  },
-  "dependencies": {
-    "lodash": "^3.10.1"
   }
 }
